--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
         .hero-background {
             /* Updated to a lawn mower related placeholder image */
-            background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Ftheturfgrassgroup.com%2Fturf-maintenance%2Fwhen-to-start-mowing-in-the-spring%2F&psig=AOvVaw2FEkDMtcdt59NOBBgPGDnO&ust=1751778616185000&source=images&cd=vfe&opi=89978449&ved=0CBYQjRxqFwoTCIjym4X6pI4DFQAAAAAdAAAAABAK'); /* Placeholder for a lawn mower image */
+            background-image: url('https://cdn.mos.cms.futurecdn.net/PQjVHayqFTPHEPMARYcAmN-650-80.jpg.webp'); /* Placeholder for a lawn mower image */
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
