--- a/index.html
+++ b/index.html
@@ -46,16 +46,81 @@
             border-radius: 1rem; /* Rounded corners for the iframe */
             box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); /* Shadow for the iframe */
         }
+
+        /* Mobile navigation specific styles */
+        .mobile-menu-button {
+            display: none; /* Hidden by default, shown on small screens */
+            cursor: pointer;
+            flex-direction: column;
+            justify-content: space-between;
+            width: 30px;
+            height: 20px;
+        }
+        .mobile-menu-button span {
+            display: block;
+            height: 3px;
+            width: 100%;
+            background-color: #22c55e; /* Green color for the dashes */
+            border-radius: 2px;
+        }
+
+        .mobile-nav-links {
+            display: flex; /* Always flex for desktop */
+        }
+
+        @media (max-width: 767px) { /* Styles for screens smaller than md (768px) */
+            .mobile-menu-button {
+                display: flex; /* Show hamburger on mobile */
+            }
+            .mobile-nav-links {
+                display: none; /* Hide desktop nav on mobile by default */
+                flex-direction: column;
+                position: absolute;
+                top: 64px; /* Adjust based on header height */
+                left: 0;
+                width: 100%;
+                background-color: white;
+                box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+                z-index: 1000;
+                padding: 1rem 0;
+                border-radius: 0 0 0.5rem 0.5rem;
+            }
+            .mobile-nav-links.active {
+                display: flex; /* Show mobile nav when active */
+            }
+            .mobile-nav-links li {
+                width: 100%;
+                text-align: center;
+                padding: 0.75rem 0;
+            }
+            .mobile-nav-links li a {
+                display: block;
+                padding: 0.5rem 1rem;
+            }
+            /* Adjust header padding for smaller size */
+            header {
+                padding-top: 0.75rem; /* Reduced padding */
+                padding-bottom: 0.75rem; /* Reduced padding */
+            }
+        }
     </style>
 </head>
 <body class="text-gray-800">
 
     <!-- Header -->
-    <header class="bg-white shadow-sm py-4">
+    <header class="bg-white shadow-sm py-3"> <!-- Reduced py-4 to py-3 for smaller header -->
         <div class="container mx-auto flex justify-between items-center px-4">
             <a href="#" class="text-3xl font-bold text-green-700">Rainao Lawn Moving</a>
-            <nav>
-                <ul class="flex space-x-6">
+
+            <!-- Hamburger menu button for mobile -->
+            <button id="mobile-menu-button" class="mobile-menu-button md:hidden">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+
+            <nav id="main-nav" class="mobile-nav-links">
+                <ul class="flex space-x-6 md:flex"> <!-- flex for desktop, but hidden by default on mobile via CSS -->
                     <li><a href="#home" class="text-gray-600 hover:text-green-600 font-medium transition duration-200">Home</a></li>
                     <li><a href="#services" class="text-gray-600 hover:text-green-600 font-medium transition duration-200">Services</a></li>
                     <li><a href="#testimonials" class="text-gray-600 hover:text-green-600 font-medium transition duration-200">Testimonials</a></li>
@@ -188,11 +253,23 @@
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
-
+                // Close mobile menu if open
+                const mobileNav = document.getElementById('main-nav');
+                if (mobileNav.classList.contains('active')) {
+                    mobileNav.classList.remove('active');
+                }
                 document.querySelector(this.getAttribute('href')).scrollIntoView({
                     behavior: 'smooth'
                 });
             });
+        });
+
+        // Mobile menu toggle functionality
+        const mobileMenuButton = document.getElementById('mobile-menu-button');
+        const mainNav = document.getElementById('main-nav');
+
+        mobileMenuButton.addEventListener('click', () => {
+            mainNav.classList.toggle('active');
         });
     </script>
 </body>
