--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             display: none; /* Hidden by default, shown on small screens */
             cursor: pointer;
             flex-direction: column;
-            justify-content: space-between;
+            justify-content: center; /* Changed from space-between to center */
+            gap: 4px; /* Added gap for slight spacing between dashes */
             width: 30px;
             height: 20px;
         }
