--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             overflow-x: hidden;
         }
         .hero-background {
-            background-image: url('https://placehold.co/1920x800/10b981/ffffff?text=Modern+Lawn+Mower');
+            background-image: url('https://images.unsplash.com/photo-1458245201577-fc8a130b8829?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bGF3biUyMG1vd2VyfGVufDB8fDB8fHww');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
